bug fix: runner panel readout could overlap with chart

--- a/src/style/runner.less
+++ b/src/style/runner.less
@@ -764,11 +764,10 @@ input:checked + #run-input--label {
 
 .block-readout {
   .digit();
-  position: absolute;
   bottom: 0;
   left: unset;
   right: 0;
-  margin: 0;
+  margin: -7px 0 0;
   padding: 0 45px 0 0;
   text-align: right;
   color: @highlight;
